--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -8,12 +8,9 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
-	min-height: 10px;
 }
 
 .gramma-logo {
-	/*display: none;*/
-	margin-left: -20px;
 	height: 90px;
 	width: 90px;
 	cursor: grab;
